> Compliance update with JBJGL changes > Removed resource folder dependency for production build